Made things look slightly better.

--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@
         <link rel="stylesheet" href="fonts.css">
         <title>compucompare</title>
     </head>
-    <body>
-        <div class="banner">
-            <span class="title_text_1">
-                compu
-            </span>
-            <span class="title_text_2">
-                compare
-            </span>
-        </div>
-        <div class="banner">
-            Coming Soon...
+    <body id="main">
+        <div class="centered_text_box">
+            <div class="banner">
+                <span class="title_text_1">
+                    compu
+                </span>
+                <span class="title_text_2">
+                    compare
+                </span>
+            </div>
+            <div class="banner">
+                Coming Soon...
+            </div>
         </div>
     </body>
 </html>
