Removed gap in title.

--- a/index.html
+++ b/index.html
@@ -9,15 +9,11 @@
     <body id="main">
         <div class="centered_text_box">
             <div class="banner">
-                <span class="title_text_1">
-                    compu
-                </span>
-                <span class="title_text_2">
-                    compare
-                </span>
+                <span class="title_text_1">compu</span><!--
+                --><span class="title_text_2">compare</span>
             </div>
             <div class="banner">
-                Coming Soon...
+                Coming Soon
             </div>
         </div>
     </body>
