Changed layout, added logo.

--- a/index.html
+++ b/index.html
@@ -4,16 +4,18 @@
         <meta charset="utf-8">
         <link rel="stylesheet" href="styles.css">
         <link rel="stylesheet" href="fonts.css">
+        <link rel="icon" type="image/png" href="favicon.png"/>
         <title>compucompare</title>
     </head>
     <body id="main">
-        <div class="centered_text_box">
-            <div class="banner">
-                <span class="title_text_1">compu</span><!--
-                --><span class="title_text_2">compare</span>
+        <div class="centered_flex_box">
+            <div id="banner_top" class="flex_banner">
+                <img src="img/compucompare.png"
+                     id="logo"
+                     alt="compucompare"/>
             </div>
-            <div class="banner">
-                Coming Soon
+            <div id="banner_bottom" class="flex_banner flex_banner_center">
+                coming soon
             </div>
         </div>
     </body>
